[package]
name = "pwrstat-server"
version = "0.1.0"
authors = ["Anicka Burova <anicka.burova@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = {git = "https://github.com/actix/actix-web"}
serde = "1.0.130"
serde_json = "1.0.70"
regex = "1.5.4"
lazy_static = "1.4.0"
structopt = "0.3.25"
quicli = "0.4.0"
anyhow = "1.0.45"

